--- a/index.html
+++ b/index.html
@@ -2,24 +2,62 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>VEX Push Back Dashboard</title>
+<title>Push Back Practice Dashboard</title>
+
 <style>
-body { font-family: Arial; padding: 20px; }
-input, button, select { margin: 4px; padding: 4px; }
-table { border-collapse: collapse; width: 100%; margin-top: 20px; }
-th, td { border: 1px solid #ccc; padding: 6px; text-align: center; }
-th { background: #eee; }
+body {
+  font-family: Arial, sans-serif;
+  padding: 20px;
+}
+
+button, select, input {
+  padding: 6px;
+  margin: 4px;
+}
+
+table {
+  border-collapse: collapse;
+  width: 100%;
+  margin-top: 15px;
+}
+
+th, td {
+  border: 1px solid #ccc;
+  padding: 6px;
+  text-align: center;
+}
+
+th {
+  background: #eee;
+}
+
 .good { background: #c8f7c5; }
 .bad { background: #f7c5c5; }
-.deleteBtn { cursor: pointer; color: red; font-weight: bold; }
-#fieldContainer { position: relative; width: 600px; height: 600px; margin-top: 20px; }
-#fieldImage { width: 100%; height: 100%; display:block; }
-#fieldCanvas { position: absolute; top:0; left:0; }
+
+#fieldContainer {
+  position: relative;
+  width: 900px;   /* WIDER FIELD */
+  height: 900px;
+  margin-top: 20px;
+}
+
+#fieldImage {
+  width: 100%;
+  height: 100%;
+  display: block;
+}
+
+#fieldCanvas {
+  position: absolute;
+  top: 0;
+  left: 0;
+}
 </style>
 </head>
+
 <body>
 
-<h2>VEX Push Back Driving Analysis</h2>
+<h2>VEX Push Back Practice</h2>
 
 <label>Mode:</label>
 <select id="mode" onchange="renderTable()">
@@ -29,203 +67,157 @@ th { background: #eee; }
 
 <hr>
 
-<h3>Sections</h3>
-<div id="sections"></div>
-<button onclick="addSection()">Add Section</button>
-
-<hr>
-
-<h3>Run Control</h3>
 <label>Section:</label>
 <select id="sectionSelect"></select>
+
 <button onclick="startSection()">Start</button>
 <button onclick="stopSection()">Stop</button>
-<p id="timerDisplay">Time: 0.00 s</p>
+
+<p id="timer">Time: 0.00 s</p>
 
 <hr>
 
-<table id="table">
-<tr>
-<th>Section</th>
-<th>Current</th>
-<th>Best</th>
-<th>Delta vs Best</th>
-<th>Increase</th>
-<th>Decrease</th>
-<th>Speed</th>
-<th>Delete</th>
-</tr>
+<table id="dataTable">
+  <thead>
+    <tr>
+      <th>Section</th>
+      <th>Best</th>
+      <th>Current</th>
+      <th>Δ vs Best</th>
+      <th>Increase</th>
+      <th>Decrease</th>
+      <th>Speed</th>
+      <th>Delete</th>
+    </tr>
+  </thead>
+  <tbody></tbody>
 </table>
 
 <h3>Field Map</h3>
+
 <div id="fieldContainer">
-  <img id="fieldImage" src="Field.png">
-  <canvas id="fieldCanvas" width="800" height="600"></canvas>
+  <img id="fieldImage" src="field.png">
+  <canvas id="fieldCanvas" width="900" height="900"></canvas>
 </div>
+
 <button onclick="clearPath()">Clear Path</button>
 
 <script>
-// ---------------- DATA ----------------
+/* ---------------- DATA ---------------- */
 let sections = JSON.parse(localStorage.getItem("sections")) || [
-  {name:"Start", distance:1},
-  {name:"Push", distance:1},
-  {name:"Return", distance:1}
+  { name: "Start to Goal", distance: 1 },
+  { name: "Push Block", distance: 1 },
+  { name: "Return", distance: 1 }
 ];
 
-let runs = JSON.parse(localStorage.getItem("runs")) || { driver: [], auton: [] };
-let currentRun = null;
+let runs = JSON.parse(localStorage.getItem("runs")) || { driver:{}, auton:{} };
 let startTime = null;
-let interval = null;
+let activeSection = null;
 
-// ---------------- SECTIONS ----------------
-function saveSections(){
-  localStorage.setItem("sections", JSON.stringify(sections));
-  renderSections();
-  populateDropdown();
-}
-
-function addSection(){
-  sections.push({name:"New Section", distance:1});
-  saveSections();
-}
-
-function renderSections(){
-  const div = document.getElementById("sections");
-  div.innerHTML = "";
+/* ---------------- INIT ---------------- */
+function init() {
+  const select = document.getElementById("sectionSelect");
+  select.innerHTML = "";
   sections.forEach((s,i)=>{
-    div.innerHTML += `
-      Name: <input value="${s.name}" onchange="sections[${i}].name=this.value;saveSections()">
-      Distance: <input type="number" step="0.01" value="${s.distance}"
-      onchange="sections[${i}].distance=parseFloat(this.value);saveSections()"><br>`;
+    let opt = document.createElement("option");
+    opt.value = i;
+    opt.textContent = s.name;
+    select.appendChild(opt);
   });
+  renderTable();
 }
+init();
 
-function populateDropdown(){
-  const sel = document.getElementById("sectionSelect");
-  sel.innerHTML = "";
-  sections.forEach((s,i)=>{
-    sel.innerHTML += `<option value="${i}">${s.name}</option>`;
-  });
-}
-
-// ---------------- TIMER ----------------
-function startSection(){
-  if(startTime !== null) return alert("Timer already running");
-  if(!currentRun){
-    currentRun = Array(sections.length).fill(null);
-  }
+/* ---------------- TIMER ---------------- */
+function startSection() {
+  if (startTime !== null) return;
+  activeSection = document.getElementById("sectionSelect").value;
   startTime = performance.now();
-  interval = setInterval(()=>{
-    let t = (performance.now()-startTime)/1000;
-    document.getElementById("timerDisplay").innerText = `Time: ${t.toFixed(2)} s`;
-  },50);
 }
 
-function stopSection(){
-  if(startTime === null) return alert("Press start first");
-  clearInterval(interval);
-  let elapsed = (performance.now()-startTime)/1000;
+function stopSection() {
+  if (startTime === null) return;
+
+  const elapsed = (performance.now() - startTime) / 1000;
   startTime = null;
-  document.getElementById("timerDisplay").innerText = "Time: 0.00 s";
 
-  const idx = Number(document.getElementById("sectionSelect").value);
-  currentRun[idx] = {
-    time: elapsed,
-    speed: sections[idx].distance / elapsed
-  };
-
-  saveRun();
-  renderTable();
-}
-
-// ---------------- RUN STORAGE ----------------
-function saveRun(){
   const mode = document.getElementById("mode").value;
-  let list = runs[mode];
+  runs[mode][activeSection] = runs[mode][activeSection] || [];
+  runs[mode][activeSection].push(elapsed);
 
-  if(!list.length || list[list.length-1].every(x=>x!==null)){
-    list.push(Array(sections.length).fill(null));
-  }
-
-  list[list.length-1] = currentRun.slice();
-  localStorage.setItem("runs", JSON.stringify(runs));
-}
-
-// ---------------- TABLE ----------------
-function renderTable(){
-  const mode = document.getElementById("mode").value;
-  const table = document.getElementById("table");
-  table.innerHTML = `
-  <tr>
-  <th>Section</th><th>Current</th><th>Best</th>
-  <th>Delta vs Best</th><th>Increase</th><th>Decrease</th>
-  <th>Speed</th><th>Delete</th>
-  </tr>`;
-
-  const allRuns = runs[mode];
-  if(!allRuns.length) return;
-
-  let best = sections.map((_,i)=>{
-    let times = allRuns.map(r=>r[i]?.time).filter(t=>t!==undefined);
-    return times.length ? Math.min(...times) : 0;
-  });
-
-  let last = allRuns[allRuns.length-1];
-
-  last.forEach((s,i)=>{
-    let row = table.insertRow();
-    row.insertCell().innerText = sections[i].name;
-    row.insertCell().innerText = s ? s.time.toFixed(2) : "-";
-    row.insertCell().innerText = best[i].toFixed(2);
-    let delta = s ? s.time - best[i] : 0;
-    row.insertCell().innerText = s ? delta.toFixed(2) : "-";
-    row.insertCell().innerText = (i>0 && s && last[i-1]) ? Math.max(0, s.time-last[i-1].time).toFixed(2) : "-";
-    row.insertCell().innerText = (i>0 && s && last[i-1]) ? Math.max(0, last[i-1].time-s.time).toFixed(2) : "-";
-    row.insertCell().innerText = s ? s.speed.toFixed(2) : "-";
-    row.insertCell().innerHTML = s ? `<span class="deleteBtn" onclick="deleteSection(${i})">✖</span>` : "-";
-    if(s) row.cells[3].className = delta<=0 ? "good" : "bad";
-  });
-}
-
-function deleteSection(i){
-  const mode = document.getElementById("mode").value;
-  let last = runs[mode][runs[mode].length-1];
-  last[i] = null;
   localStorage.setItem("runs", JSON.stringify(runs));
   renderTable();
 }
 
-// ---------------- FIELD DRAW ----------------
+/* ---------------- TABLE ---------------- */
+function renderTable() {
+  const tbody = document.querySelector("#dataTable tbody");
+  tbody.innerHTML = "";
+  const mode = document.getElementById("mode").value;
+
+  sections.forEach((s,i)=>{
+    const data = runs[mode][i] || [];
+    if (data.length === 0) return;
+
+    const best = Math.min(...data);
+    const current = data[data.length-1];
+    const delta = current - best;
+    const speed = s.distance / current;
+
+    const row = tbody.insertRow();
+    row.insertCell().textContent = s.name;
+    row.insertCell().textContent = best.toFixed(2);
+    row.insertCell().textContent = current.toFixed(2);
+
+    const deltaCell = row.insertCell();
+    deltaCell.textContent = delta.toFixed(2);
+    deltaCell.className = delta <= 0 ? "good" : "bad";
+
+    row.insertCell().textContent = "-";
+    row.insertCell().textContent = "-";
+    row.insertCell().textContent = speed.toFixed(2);
+
+    const del = row.insertCell();
+    const btn = document.createElement("button");
+    btn.textContent = "🗑";
+    btn.onclick = ()=>{
+      runs[mode][i].pop();
+      localStorage.setItem("runs", JSON.stringify(runs));
+      renderTable();
+    };
+    del.appendChild(btn);
+  });
+}
+
+/* ---------------- FIELD DRAWING ---------------- */
 const canvas = document.getElementById("fieldCanvas");
 const ctx = canvas.getContext("2d");
-let path = JSON.parse(localStorage.getItem("path")) || [];
-let drawing=false;
+let drawing = false;
+let path = [];
 
-canvas.onmousedown=e=>{drawing=true;addPoint(e)};
-canvas.onmousemove=e=>drawing&&addPoint(e);
-canvas.onmouseup=()=>{drawing=false;savePath()};
-canvas.onmouseleave=()=>{drawing=false;savePath()};
+canvas.addEventListener("mousedown", e=>{drawing=true; addPoint(e);});
+canvas.addEventListener("mousemove", e=>{if(drawing) addPoint(e);});
+canvas.addEventListener("mouseup", ()=>drawing=false);
 
 function addPoint(e){
-  const r=canvas.getBoundingClientRect();
-  path.push({x:e.clientX-r.left,y:e.clientY-r.top});
+  const r = canvas.getBoundingClientRect();
+  path.push({x:e.clientX-r.left, y:e.clientY-r.top});
   drawPath();
 }
+
 function drawPath(){
-  ctx.clearRect(0,0,600,600);
-  ctx.strokeStyle="blue"; ctx.lineWidth=3;
+  ctx.clearRect(0,0,canvas.width,canvas.height);
   ctx.beginPath();
+  ctx.strokeStyle="blue";
+  ctx.lineWidth=3;
   path.forEach((p,i)=>i?ctx.lineTo(p.x,p.y):ctx.moveTo(p.x,p.y));
   ctx.stroke();
 }
-function savePath(){localStorage.setItem("path",JSON.stringify(path))}
-function clearPath(){path=[];drawPath();savePath()}
 
-// ---------------- INIT ----------------
-renderSections();
-populateDropdown();
-renderTable();
-drawPath();
+function clearPath(){
+  path=[];
+  drawPath();
+}
 </script>
 
 </body>
